<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drizzle</string>

    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>

    <string name="action_share">Share</string>
    <string name="action_share_profile">Share profile</string>
    <string name="action_share_shot">Shot</string>
    <string name="action_share_link">Link</string>
    <string name="action_share_image">Image</string>

    <string name="action_link_website">Website</string>
    <string name="action_link_twitter">Twitter</string>

    <string name="drawer_main_feed">Feed</string>
    <string name="drawer_main_shots">Shots</string>

    <string name="drawer_personal">Personal</string>
    <string name="drawer_personal_buckets">Buckets</string>
    <string name="drawer_personal_go_pro">Go PRO</string>
    <string name="drawer_personal_account_settings">Account Settings</string>
    <string name="drawer_personal_sign_out">Sign Out</string>
    <string name="drawer_personal_sign_in">Sign In</string>

    <string name="drawer_app_rate">Rate &amp; Review</string>
    <string name="drawer_app_feedback">Send Feedback</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_pixels_dribbbled">pixels dribbbled</string>

    <string name="send_feedback_with">Send feedback with</string>
    <string name="send_feedback_subject">I\'ve got feedback!</string>
    <string name="send_feedback_body">Hello,\n\n</string>
    <string name="send_feedback_error">You don\'t have any email apps installed. Please send an email to %s</string>

    <string name="filter_timeframe">Timeframe</string>
    <string name="filter_sort_by">Sort by</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_apply">Apply</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_title_likes">Likes</string>
    <string name="dialog_title_buckets">Buckets</string>
    <string name="dialog_title_tags">Tags</string>

    <string name="intro_title">Hi there!</string>
    <string name="intro_description">Drizzle is a beautiful app for Dribbble,\ncrafted with care and attention to details.\n\nBrowse,
        upload and like shots\nlike never before.</string>
    <string name="intro_sign_in">Sign in</string>
    <string name="intro_sign_up">or sign up on dribbble.com</string>
    <string name="intro_skip">Skip</string>

    <string name="auth_title">Sign in to Dribbble</string>
    <string name="auth_invalid_attempt">Invalid authorization attempt.</string>
    <string name="auth_unexpected_error">Something went wrong. Please email the developer or try again.</string>
    <string name="auth_connecting">Connecting to Dribbble…</string>

    <string name="tab_following">Following</string>
    <string name="tab_featured">Featured</string>

    <string name="word_by">by</string>
    <string name="word_for">for</string>

    <string name="share_shot">Share %s</string>
    <string name="share_user">Share %s\'s profile</string>

    <string name="stats_likes">%d likes</string>
    <string name="stats_buckets">%d buckets</string>
    <string name="stats_views">%d views</string>
    <string name="stats_tags">%d tags</string>

    <string name="stats_shots">%d shots</string>
    <string name="stats_projects">%d projects</string>
    <string name="stats_followers">%d followers</string>

    <string name="stats_like">1 like</string>
    <string name="stats_bucket">1 bucket</string>
    <string name="stats_view">1 view</string>
    <string name="stats_tag">1 tag</string>

    <string name="stats_shot">1 attachment</string>
    <string name="stats_project">1 project</string>
    <string name="stats_follower">1 follower</string>

    <string name="section_attachments">%d attachments</string>
    <string name="section_responses">%d responses</string>
    <string name="section_rebounds">%d rebounds</string>

    <string name="section_attachment">1 attachment</string>
    <string name="section_response">1 response</string>
    <string name="section_rebound">1 rebound</string>

    <string name="section_rebound_of">Rebound of</string>
    <string name="loading">Loading…</string>
    <string name="dribbble_error_generic">Can\'t connect to Dribbble.</string>

    <string-array name="filter_list_options">
        <item>Any</item>
        <item>Team Shots</item>
        <item>Debuts</item>
        <item>Playoffs</item>
        <item>Rebounds</item>
        <item>Animated GIFs</item>
        <item>Shots with Attachments</item>
    </string-array>

    <string-array name="filter_timeframe_options">
        <item>Now</item>
        <item>This Past Week</item>
        <item>This Past Month</item>
        <item>This Past Year</item>
        <item>All Time</item>
    </string-array>

    <string-array name="filter_sort_options">
        <item>Popular</item>
        <item>Recent</item>
        <item>Most Viewed</item>
        <item>Most Commented</item>
    </string-array>

    <string name="menu_comment_like">Like</string>
    <string name="menu_comment_unlike">Unlike</string>
    <string name="menu_comment_view_profile">View Profile</string>
    <string name="menu_comment_update">Update</string>
    <string name="menu_comment_delete">Delete</string>
    <string name="menu_comment_likes">Likes</string>
    <string name="menu_comment_share">Share</string>

</resources>
